AppleWin history
================

This version of AppleWin is based directly on Oliver Schmidt's 1.10.4 source.

Bug reports should be submitted here:
https://developer.berlios.de/bugs/?func=addbug&group_id=6117

Feature requests should be submitted here:
https://developer.berlios.de/feature/?func=addfeature&group_id=6117

Tom Charlesworth
tomch at users.berlios.de


Latest:
-------

Fixes:
. [ Bug #19154 ] ProDOS Order 2IMG crashing


1.23.2 - 14 Sep 2013
--------------------
Changes:
. Added About dialog showing GPL (at startup, but only when AppleWin version changes).
. [Bug #18940] Extend BSAVE and BLOAD Command To Memory Banks 0 and 1
	Extended debugger BLOAD with bank support:
	. BLOAD [file],[bank:]address[,length]
	. BLOAD [file],[bank:]address[:end]
	. If no filename specified, will use last BLOAD or BSAVE filename.
	Extended debugger BSAVE with bank support:
	. BSAVE [file],[bank:]address,length
	. BSAVE [file],[bank:]address:end
	. If no filename specified, defaults to: '####.####.[bank##].bin'
		(where the form is <address>.<length>.bin)

Fixes:
. Fixed save-state bug for when 4K BANK1 is dirty (previously it would save the stale data instead).
. [Bug #18723,#19070] Mouse movement for CopyII+9.1 and ProTERM3.1.


1.23.0 - 26 Apr 2013
--------------------
RC for public release.

Changes:
. Extended logging support during startup and shutdown.
. Allow debugging of save-state image from start-up "logo" screen.
. Added Troubleshooting section to help file.

Fixes:
. Screenshot 280x192:
  - [Bug #018928] Correction for left edge loss of scaled scanline.
  - A screenshot in 50% scanline mode would produce an all black image.
. Fixed inserting of disk images from save-state when drive-2 contained the disk required for drive-1.


1.22.1 - 7 Mar 2013
--------------------
Changes:
. Make 2x the default
  - [Bug #018851] Refuse double-sizing the window unless the screen is large enough.

Fixes:
. [Bug #018886] MMU no good when no cards in slot-4 & 5